--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./cricket.css">
     <title>project</title>
 </head>
 <body>
@@ -41,7 +42,7 @@
     <th>score</th>
     <th>result</th>
 </tr>
-<!-- bbb -->
+
 <tr>
     <td>1975</td>
     <td>west indies</td>
@@ -50,7 +51,7 @@
     <td>274</td>
     <td>west indies won by 17 runs</td>
 </tr>
-<!-- bbb -->
+
 <tr>
     <td>1979</td>
     <td>west indies</td>
@@ -142,8 +143,8 @@
 </table>
 <br>
 
-<p>this table has been taken form form cricket website:<a href="#">click here</a>to visit</p>
-<p>i am cricket guru bte. if you want to know something. you can contact me.</p>
+<p>This table has been taken form form cricket website:<a href="#">click here</a>to visit</p>
+<p>I am cricket guru bte. if you want to know something. you can contact me.</p>
 
 <br>
 <fieldset>
